--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,8 +33,8 @@ html(lang='en')
                 img.link-icon(src='/images/link.svg')
                 strong Resources:
               div.resource-item-container
-                a.resource-item(href='https://dialog-doc-la.mybluemix.net/apis/') API Overview
-                a.resource-item(href='https://dialog-doc-la.mybluemix.net/doc/dialog') Documentation
+                a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/apis/#!/dialog') API Overview
+                a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog.html') Documentation
                 a.resource-item(href='https://github.com/watson-developer-cloud/dialog-tool') Fork on Github
       block row-content
 
