remove edit link

--- a/views/index.jade
+++ b/views/index.jade
@@ -55,8 +55,8 @@ block row-content
         div.new-dialog-container.clearfix.dialog-info
           h3.dialog-name-span.exist-dialog-flow-title
           div.dialog-links(style='visibility:hidden;')
-            a.edit(href="javascript:;") edit
-            |  | 
+            //- a.edit(href="javascript:;") edit
+            //- |  | 
             //- a.replace(href="javascript:;") replace
             //- |  | 
             a.delete(href="javascript:;") delete
