--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,7 +28,7 @@ html(lang='en')
               img.service-icon(src='/images/app.png')
             div.col-lg-10.col-md-10.col-sm-10.dialog-description
               h1.service-title Dialog Tool
-              p Use the Dialog Tool to edit dialogs and to see them in action. 
+              p Tool to create, manage, and interact with dialogs for the IBM Watson Dialog Service 
               div.resource
                 img.link-icon(src='/images/link.svg')
                 strong Resources:
