--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ html(lang='en')
                 img.link-icon(src='/images/link.svg')
                 strong Resources:
               div.resource-item-container
-                a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/apis/#!/dialog') API Overview
+                a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/apis/dialog-apis.html') API Overview
                 a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog.html') Documentation
                 a.resource-item(href='https://github.com/watson-developer-cloud/dialog-tool') Fork on Github
       block row-content
