Display error text from api instead of general error message when an api action fails around dialogs

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html(lang='en')
 
   body.claro
     div.row.service-container
-      div.col-lg-12.service-header
+      div.service-header
         div.row.top-nav
           div.container
             h3.heading.left IBM 
