--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
-//- index.jade
-extends ./layout.jade
+//- index.pug
+extends ./layout.pug
 
 block row-content
   div.container
@@ -56,9 +56,9 @@ block row-content
           h3.dialog-name-span.exist-dialog-flow-title
           div.dialog-links(style='visibility:hidden;')
             //- a.edit(href="javascript:;") edit
-            //- |  | 
+            //- |  |
             //- a.replace(href="javascript:;") replace
-            //- |  | 
+            //- |  |
             a.delete(href="javascript:;") delete
         div.dialog-loading.new-dialog-container(style='display:none')
           div.text-center.new-dialog-container-loading
