updated api reference link

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html(lang='en')
       div.service-header
         div.row.top-nav
           div.container
-            h3.heading.left IBM 
+            h3.heading.left IBM
               span.text-right Watson Developer Cloud
         div.row.header
           div.container
@@ -28,13 +28,13 @@ html(lang='en')
               img.service-icon(src='/images/app.png')
             div.col-lg-10.col-md-10.col-sm-10.dialog-description
               h1.service-title Dialog Tool
-              p Tool to create, manage, and interact with dialogs for the IBM Watson Dialog Service 
+              p Tool to create, manage, and interact with dialogs for the IBM Watson Dialog Service
               div.resource
                 img.link-icon(src='/images/link.svg')
                 strong Resources:
               div.resource-item-container
-                a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/apis/dialog-apis.html') API Overview
-                a.resource-item(href='http://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog.html') Documentation
+                a.resource-item(href='https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog/api/v1/') API Reference
+                a.resource-item(href='https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/dialog.html') Documentation
                 a.resource-item(href='https://github.com/watson-developer-cloud/dialog-tool') Fork on Github
       block row-content
 
